pagina novo profissional

--- a/src/main/resources/templates/profissionais/index.html
+++ b/src/main/resources/templates/profissionais/index.html
@@ -15,6 +15,11 @@
                 <div class="col-md-5 align-self-center">
                     <h4 class="text-themecolor">Profissionais</h4>
                 </div>
+                <div class="col-md-7 align-self-center text-end">
+                  <div class="d-flex justify-content-end align-items-center">
+                      <a type="button" href="/profissionais/novo" class="btn btn-info d-none d-lg-block m-l-15 text-white">Novo</a>
+                  </div>
+              </div>
             </div>
             <div class="row">
               <table class="table">
