--- a/src/main/resources/templates/compartilhados/head.html
+++ b/src/main/resources/templates/compartilhados/head.html
@@ -24,5 +24,32 @@
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-<![endif]-->
+    <![endif]-->
+    <style>
+        form label{
+            width: 100px;
+        }
+
+        fieldset{
+            padding: 20px;
+            border-radius: 10px;
+        }
+
+        legend{
+            border-bottom: 1px solid #000;
+            margin-bottom: 30px;
+        }
+
+        input, textarea{
+            width: 100%;
+        }
+
+        textarea{
+            height: 200px;
+        }
+
+        .table-action{
+            width: 50px;
+        }
+    </style>
 </head>
