mudando layout para free

--- a/src/main/resources/templates/compartilhados/footer.html
+++ b/src/main/resources/templates/compartilhados/footer.html
@@ -1,4 +1,9 @@
-<footer class="footer">
-    © 2021 Eliteadmin by themedesigner.in
-    <a href="https://www.wrappixel.com/">WrapPixel</a>
+
+<footer class="text-muted py-5">
+    <div class="container">
+      <p class="float-end mb-1">
+        <a href="#">Voltar para o topo</a>
+      </p>
+      <p class="mb-0">Para ter acesso as gravações clique <a href="https://www.torneseumprogramador.com.br/aulas/desafio_java">https://www.torneseumprogramador.com.br</a></p>
+    </div>
 </footer>
