--- a/src/main/resources/templates/compartilhados/head.html
+++ b/src/main/resources/templates/compartilhados/head.html
@@ -6,25 +6,11 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <!-- Favicon icon -->
-    <link rel="icon" type="image/png" sizes="16x16" href="http://eliteadmin.themedesigner.in/demos/bt4/assets/images/favicon.png">
     <title>CRUD Desafio 21 dias Java</title>
     <!-- This page CSS -->
     <!-- chartist CSS -->
-    <link href="http://eliteadmin.themedesigner.in/demos/bt4/assets/node_modules/morrisjs/morris.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/docs/5.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Vector CSS -->
-    <link href="http://eliteadmin.themedesigner.in/demos/bt4/assets/node_modules/vectormap/jquery-jvectormap-2.0.2.css" rel="stylesheet" />
-    <!--c3 CSS -->
-    <link href="http://eliteadmin.themedesigner.in/demos/bt4/eliteadmin/dist/css/pages/easy-pie-chart.css" rel="stylesheet">
-    <!-- Custom CSS -->
-    <link href="http://eliteadmin.themedesigner.in/demos/bt4/eliteadmin/dist/css/style.min.css" rel="stylesheet">
-    <!-- Dashboard 1 Page CSS -->
-    <link href="http://eliteadmin.themedesigner.in/demos/bt4/eliteadmin/dist/css/pages/dashboard2.css" rel="stylesheet">
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
     <style>
         form label{
             width: 100px;
