--- a/src/main/resources/templates/profissionais/form.html
+++ b/src/main/resources/templates/profissionais/form.html
@@ -2,14 +2,12 @@
 <html lang="en">
 <head th:replace="compartilhados/head"></head>
 <body class="skin-blue fixed-layout">
-    <div th:replace="compartilhados/preloader"></div>
-
     <div id="main-wrapper">
         <header th:replace="compartilhados/header"></header>
-        <aside th:replace="compartilhados/aside"></aside>
     </div>
 
-    <div class="page-wrapper" style="min-height: 401px;">
+    <main>
+      <section class="py-5 text-center container">
         <div class="container-fluid">
             <div class="row page-titles">
                 <div class="col-md-5 align-self-center">
@@ -47,11 +45,11 @@
             <!-- ============================================================== -->
             <!-- End Right sidebar -->
             <!-- ============================================================== -->
-        </div>
+        </section>
         <!-- ============================================================== -->
         <!-- End Container fluid  -->
         <!-- ============================================================== -->
-    </div>
+      </main>
 
     <footer th:replace="compartilhados/footer"></footer>
     
