--- a/src/main/resources/templates/compartilhados/header.html
+++ b/src/main/resources/templates/compartilhados/header.html
@@ -1,44 +1,27 @@
-<header class="topbar">
-    <nav class="navbar top-navbar navbar-expand-md navbar-dark">
-        <!-- ============================================================== -->
-        <!-- Logo -->
-        <!-- ============================================================== -->
-        <div class="navbar-header">
-            <a class="navbar-brand" href="/">
-                <!-- Logo icon --><b>
-                    <!--You can put here icon as well // <i class="wi wi-sunset"></i> //-->
-                    <!-- Dark Logo icon -->
-                    <img src="http://eliteadmin.themedesigner.in/demos/bt4/assets/images/logo-icon.png"
-                        alt="homepage" class="dark-logo">
-                    <!-- Light Logo icon -->
-                    <img src="http://eliteadmin.themedesigner.in/demos/bt4/assets/images/logo-light-icon.png"
-                        alt="homepage" class="light-logo">
-                </b>
-                <!--End Logo icon -->
-                <!-- Logo text --><span>
-                    <!-- dark Logo text -->
-                    <img src="http://eliteadmin.themedesigner.in/demos/bt4/assets/images/logo-text.png"
-                        alt="homepage" class="dark-logo">
-                    <!-- Light Logo text -->
-                    <img src="http://eliteadmin.themedesigner.in/demos/bt4/assets/images/logo-light-text.png"
-                        class="light-logo" alt="homepage">
-                </span>
-            </a>
+<header>
+    <div class="bg-dark collapse" id="navbarHeader">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-8 col-md-7 py-4">
+            <h4 class="text-white">Desafio links</h4>
+            <p class="text-muted">
+                <a href="/profissionais">
+                    Clique aqui para cadastrar profissionais
+                </a>    
+            </p>
+          </div>
         </div>
-        <!-- ============================================================== -->
-        <!-- End Logo -->
-        <!-- ============================================================== -->
-        <div class="navbar-collapse">
-            <!-- ============================================================== -->
-            <!-- toggle and nav items -->
-            <!-- ============================================================== -->
-            <ul class="navbar-nav me-auto">
-                <li class="nav-item"> <a class="nav-link nav-toggler d-block d-md-none waves-effect waves-dark"
-                        href="javascript:void(0)">Menu</a> </li>
-                <li class="nav-item"> <a
-                        class="nav-link sidebartoggler d-none d-lg-block d-md-block waves-effect waves-dark"
-                        href="javascript:void(0)">Menu</a> </li>
-            </ul>
-        </div>
-    </nav>
-</header>
+      </div>
+    </div>
+    <div class="navbar navbar-dark bg-dark shadow-sm">
+      <div class="container">
+        <a href="/" class="navbar-brand d-flex align-items-center">
+          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true" class="me-2" viewBox="0 0 24 24"><path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"></path><circle cx="12" cy="13" r="4"></circle></svg>
+          <strong>Desafio 21 dias - Java</strong>
+        </a>
+        <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </div>
+    </div>
+  </header>
