--- a/src/main/resources/templates/profissionais/index.html
+++ b/src/main/resources/templates/profissionais/index.html
@@ -2,15 +2,12 @@
 <html lang="en">
 <head th:replace="compartilhados/head"></head>
 <body class="skin-blue fixed-layout">
-    <div th:replace="compartilhados/preloader"></div>
-
     <div id="main-wrapper">
         <header th:replace="compartilhados/header"></header>
-        <aside th:replace="compartilhados/aside"></aside>
     </div>
 
-    <div class="page-wrapper" style="min-height: 401px;">
-        <div class="container-fluid">
+    <main>
+      <section class="py-5 text-center container">
             <div class="row page-titles">
                 <div class="col-md-5 align-self-center">
                     <h4 class="text-themecolor">Profissionais</h4>
@@ -53,7 +50,7 @@
             <!-- ============================================================== -->
             <!-- End Right sidebar -->
             <!-- ============================================================== -->
-        </div>
+      </section>
         <!-- ============================================================== -->
         <!-- End Container fluid  -->
         <!-- ============================================================== -->
